--- a/resourcepack/assets/bugnet/lang/en_us.json
+++ b/resourcepack/assets/bugnet/lang/en_us.json
@@ -1,19 +1,28 @@
 {
   "item.minecraft.knowledge_book": "Click to Craft",
+  "pack.bugnet.hover_event": "Click here to open the Bug Net Wiki",
   "pack.bugnet": "Bug Net",
+
+  "BUGNET (MISSING RESOURCES)": "%s",
+  "The Bug Net Resource Pack is not installed.": "%s",
+
+  "commands.bugnet.reload.success": " Reloaded Bug Net",
+  "commands.bugnet.initiate": "%s is enabled.",
+  "commands.bugnet.wrong_version: You are using Bug Net on the incorrect Minecraft version. Please check the download.": "\nYou are using Bug Net on the incorrect Minecraft version. Please check the download.",
+  "commands.bugnet.initiate.wrong_version.title": "WRONG VERSION",
 
   "chat.bugnet.gamerules.title": "Bug Net Gamerules",
   "chat.bugnet.gamerules.false": "[Off]",
   "chat.bugnet.gamerules.true": "[On]",
   "chat.bugnet.gamerules.default_false": "Default: Off",
   "chat.bugnet.gamerules.default_true": "Default: On",
-  "chat.bugnet.gamerules.capturesmallmobs": "Capture Large Mobs",
+  "chat.bugnet.gamerules.capturesmallmobs": "Capture Small Mobs",
   "chat.bugnet.gamerules.capturesmallmobs.description": "Toggle whether entities with the small_mob identifier can be captured",
-  "chat.bugnet.gamerules.capturemediummobs": "Capture Large Mobs",
+  "chat.bugnet.gamerules.capturemediummobs": "Capture Medium Mobs",
   "chat.bugnet.gamerules.capturemediummobs.description": "Toggle whether entities with the medium_mob identifier can be captured",
   "chat.bugnet.gamerules.capturelargemobs": "Capture Large Mobs",
   "chat.bugnet.gamerules.capturelargemobs.description": "Toggle whether entities with the large_mob identifier can be captured",
-  "chat.bugnet.gamerules.capturebosses": "Capture Large Mobs",
+  "chat.bugnet.gamerules.capturebosses": "Capture Bosses",
   "chat.bugnet.gamerules.capturebosses.description": "Toggle whether entities with the boss identifier can be captured",
   "chat.bugnet.gamerules.captureplayers": "Capture Players",
   "chat.bugnet.gamerules.captureplayers.description": "Toggle whether players can be captured",
